feat: 管理画面追加 - 管理者アカウントでコースを編集可能に backend専用環境変数取得機能
